Don't set a minimum height, but do some fancy js to stop the img collapsing before the loading gif loads (which looks like a flicker). Minimum height makes images squash/stretch on mobiles.

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -18,7 +18,6 @@
     background: #4393B9;
     img {
         max-height: 400px;
-        min-height: 300px;
     }
 }
 
